// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`incStable can bump major 1`] = `
Object {
  "major": 2,
  "minor": 0,
  "patch": 0,
  "version": "2.0.0",
  "vprefix": false,
}
`;

exports[`incStable can bump minor 1`] = `
Object {
  "major": 1,
  "minor": 2,
  "patch": 0,
  "version": "1.2.0",
  "vprefix": false,
}
`;

exports[`incStable can bump patch 1`] = `
Object {
  "major": 2,
  "minor": 0,
  "patch": 0,
  "version": "2.0.0",
  "vprefix": false,
}
`;

exports[`incStable propagates vprefix 1`] = `
Object {
  "major": 2,
  "minor": 0,
  "patch": 0,
  "version": "2.0.0",
  "vprefix": true,
}
`;

exports[`parse 0.0.1 1`] = `
Object {
  "major": 0,
  "minor": 0,
  "patch": 1,
  "version": "0.0.1",
  "vprefix": false,
}
`;

exports[`parse 0.0.11 1`] = `
Object {
  "major": 0,
  "minor": 0,
  "patch": 11,
  "version": "0.0.11",
  "vprefix": false,
}
`;

exports[`parse 0.1.0 1`] = `
Object {
  "major": 0,
  "minor": 1,
  "patch": 0,
  "version": "0.1.0",
  "vprefix": false,
}
`;

exports[`parse 0.11.0 1`] = `
Object {
  "major": 0,
  "minor": 11,
  "patch": 0,
  "version": "0.11.0",
  "vprefix": false,
}
`;

exports[`parse 1.0.0 1`] = `
Object {
  "major": 1,
  "minor": 0,
  "patch": 0,
  "version": "1.0.0",
  "vprefix": false,
}
`;

exports[`parse 11.0.0 1`] = `
Object {
  "major": 11,
  "minor": 0,
  "patch": 0,
  "version": "11.0.0",
  "vprefix": false,
}
`;

exports[`parse pre-releases 0.0.0-a.1 1`] = `
Object {
  "major": 0,
  "minor": 0,
  "patch": 0,
  "preRelease": Object {
    "buildNum": 1,
    "identifier": "a",
  },
  "version": "0.0.0-a.1",
  "vprefix": false,
}
`;

exports[`parse v-prefix v0.0.0 1`] = `
Object {
  "major": 0,
  "minor": 0,
  "patch": 0,
  "version": "0.0.0",
  "vprefix": true,
}
`;

exports[`parse v-prefix v0.0.0-a.1 1`] = `
Object {
  "major": 0,
  "minor": 0,
  "patch": 0,
  "preRelease": Object {
    "buildNum": 1,
    "identifier": "a",
  },
  "version": "0.0.0-a.1",
  "vprefix": true,
}
`;

exports[`stableToPreview turns stable-release version into a pre-release one 1`] = `
Object {
  "major": 1,
  "minor": 2,
  "patch": 3,
  "preRelease": Object {
    "buildNum": 100,
    "identifier": "foobar",
  },
  "version": "1.2.3-foobar.100",
  "vprefix": false,
}
`;
